exports[`test Signup renders 1`] = `
<div
  className="row">
  <aside
    className="col-xs-12 col-sm-3">
    <nav
      className="local-nav step-navigation">
      <ul>
        <li>
          <a
            className="is-active is-current"
            href="/start"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle" />
             
            Become a seller
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/your-info"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Business representative
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/business-details"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Create your profile
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/domains"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Digital Services
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/pricing"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Pricing
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/case-study"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Case Study
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/documents"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Documents
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/review"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Review your profile
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/submit"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Submit
          </a>
        </li>
      </ul>
    </nav>
  </aside>
  <article
    className="col-xs-12 col-sm-8 col-sm-push-1">
    <div>
      <h1>
        Become a seller
      </h1>
      <p>
        To join the Marketplace you need to:
      </p>
      <ul>
        <li>
          Tell us about your company
        </li>
        <li>
          Describe the digital services you\'ll offer and their rates.
        </li>
        <li>
          Provide evidence of your skills for assessment.
        </li>
        <li>
          Agree to the 
          <a
            href="#">
            terms in the deed
          </a>
          .
        </li>
      </ul>
      <p>
        Registering takes about 
        <b>
          30 mins
        </b>
        . You can save your application and continue it later.
      </p>
      <p>
        Before you start
      </p>
      <ul>
        <li>
          By completing this process you are signing the deed, so be sure the authorised person in the company completes this form.
        </li>
      </ul>
      <p>
        <a
          href="#"
          onClick={[Function]}
          role="button">
          Start Now 
        </a>
      </p>
    </div>
  </article>
</div>
`;

exports[`test Signup renders empty Your Info form 1`] = `
<div
  className="row">
  <aside
    className="col-xs-12 col-sm-3">
    <nav
      className="local-nav step-navigation">
      <ul>
        <li>
          <a
            className={false}
            href="/start"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Become a seller
          </a>
        </li>
        <li>
          <a
            className="is-active is-current"
            href="/your-info"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle" />
             
            Business representative
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/business-details"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Create your profile
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/domains"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Digital Services
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/pricing"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Pricing
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/case-study"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Case Study
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/documents"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Documents
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/review"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Review your profile
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/submit"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Submit
          </a>
        </li>
      </ul>
    </nav>
  </aside>
  <article
    className="col-xs-12 col-sm-8 col-sm-push-1">
    <div
      className="layout">
      <header>
        <h1>
          Business representative
        </h1>
      </header>
      <article
        role="main">
        <form
          action={undefined}
          id="yourinfo"
          method="post"
          onReset={[Function]}
          onSubmit={[Function]}>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="name">
              Business Name
            </label>
            <p
              className="hint"
              id="name-hint">
              As you would like it displayed on the Marketplace
            </p>
            <input
              aria-describedby="name-hint"
              className=""
              id="name"
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="representative">
              Business Representative
            </label>
            <p
              className="hint"
              id="representative-hint">
              The authorised person who signs contracts with clients
            </p>
            <input
              aria-describedby="representative-hint"
              className=""
              id="representative"
              name="representative"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="abn">
              ABN
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="abn"
              name="abn"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="phone">
              Representative\'s phone number
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="phone"
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="email">
              Representative\'s email
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="" />
          </div>
          <input
            name="next_step_slug"
            type="hidden"
            value="business-details" />
          <input
            role="button"
            type="submit"
            value="Save & Continue" />
        </form>
      </article>
    </div>
  </article>
</div>
`;

exports[`test Signup renders populated Your Info form 1`] = `
<div
  className="row">
  <aside
    className="col-xs-12 col-sm-3">
    <nav
      className="local-nav step-navigation">
      <ul>
        <li>
          <a
            className={false}
            href="/start"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Become a seller
          </a>
        </li>
        <li>
          <a
            className="is-active is-current"
            href="/your-info"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle" />
             
            Business representative
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/business-details"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Create your profile
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/domains"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Digital Services
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/pricing"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Pricing
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/case-study"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Case Study
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/documents"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Documents
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/review"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Review your profile
          </a>
        </li>
        <li>
          <a
            className={false}
            href="/submit"
            onClick={[Function]}>
            <i
              aria-hidden="true"
              className="fa fa-circle-thin incomplete" />
             
            Submit
          </a>
        </li>
      </ul>
    </nav>
  </aside>
  <article
    className="col-xs-12 col-sm-8 col-sm-push-1">
    <div
      className="layout">
      <header>
        <h1>
          Business representative
        </h1>
      </header>
      <article
        role="main">
        <form
          action="/documents"
          id="yourinfo"
          method="post"
          onReset={[Function]}
          onSubmit={[Function]}>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="name">
              Business Name
            </label>
            <p
              className="hint"
              id="name-hint">
              As you would like it displayed on the Marketplace
            </p>
            <input
              aria-describedby="name-hint"
              className=""
              id="name"
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="name" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="representative">
              Business Representative
            </label>
            <p
              className="hint"
              id="representative-hint">
              The authorised person who signs contracts with clients
            </p>
            <input
              aria-describedby="representative-hint"
              className=""
              id="representative"
              name="representative"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="representative" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="abn">
              ABN
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="abn"
              name="abn"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="abn" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="phone">
              Representative\'s phone number
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="phone"
              name="phone"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="phone" />
          </div>
          <div
            className="field">
            <label
              className="question-heading"
              htmlFor="email">
              Representative\'s email
            </label>
            <input
              aria-describedby={undefined}
              className=""
              id="email"
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              pattern={undefined}
              type="text"
              value="email" />
          </div>
          <input
            name="next_step_slug"
            type="hidden"
            value="business-details" />
          <input
            role="button"
            type="submit"
            value="Save & Continue" />
        </form>
      </article>
    </div>
  </article>
</div>
`;
